--- a/todo.txt
+++ b/todo.txt
@@ -14,6 +14,11 @@
   + Make Stats a datatype deriving Ord
     = so we can quickly test stat reqs with >
 
+- Enemy AI:
+  - if in range, attack, else move toward player
+  - is there a way to generalize damage? Maybe make it over CreatureInfo?
+
+
 - Skill system:
   - create datatype 'Skill'
   - active skills:
